# opstic

./: .gitmodules  dune-project  ojmpst.opam  opstic.opam.locked
.github/workflows/: ocaml-ci.yml
lib/: direct.ml  dune  id.ml  ojmpst.ml  opstic.ml  synchronous.ml
lib_js/: comm.ml  comm.mli  concurrentQueue.ml  concurrentQueue.mli  dune  dyn.ml  dyn.mli  id.ml  lin.ml  lin.mli  monad.ml  monad.mli  ojmpst_js.ml  opstic.ml  opstic_js.ml  sample.ml  server.ml  server.mli  serverEndpoint.ml  serverEndpoint.mli  serverImpl.ml  serverImpl.mli  serverIo.ml  serverIo.mli  service.ml  service.mli  tmsg.ml  types.ml  witness.ml  witness.mli
lib_native/: dune  ojmpst_native.ml  opstic_native.ml
monadic/lib/: dune  opstic_monadic.ml
monadic/lib_js/: dune  opstic_monadic_js.ml
monadic/lib_native/: dune  opstic_monadic_native.ml
ppx/: codegen.ml  codegen.mli  dune  gtype.ml  gtype.mli  ltype.ml  ltype.mli  ppx_main.ml
test/: dune
tests/: dune  test_direct.ml
util_js/: concurrentQueue.ml  dune  opstic_util_js.ml
